# APISample-Django

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: manage.py
app/APISample/: api_urls.py  asgi.py  settings.py  urls.py  wsgi.py
app/templates/: swagger-ui.html
app/users/: admin.py  models.py  serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
